# log-my-printer

./: Makefile  README.md  check.ps1  pyproject.toml
log_my_printer/: __init__.py  gui.py  main.py  paths.py  printer_manager.py  smtp2go.py  tools.py
